# nodenetraw

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  eslint.config.mjs  package-lock.json  package.json
.github/workflows/: hardening.yml  release-artifacts.yml
ai_documentation/: 00-index.md  01-scope-and-requirements.md  02-architecture.md  03-safety-and-security.md  04-roadmap.md  05-decision-log.md  06-tooling-and-testing.md  21-phase-11-report.md  22-phase-11-implementation-audit.md  30-monorepo-migration-report.md  31-network-and-scanner-evolution-plan.md  32-network-evolution-plan-review.md  33-phase-16-report.md  34-phase-17-report.md  35-phase-18-report.md  36-phase-19-report.md  37-phase-20-report.md  38-phase-21-report.md  39-phase-22-report.md  40-phase-23-report.md
crates/nodenet-linux-context/: Cargo.toml
crates/nodenet-linux-context/src/: bounds.rs  cancellation.rs  context.rs  decoder.rs  driver.rs  error.rs  lib.rs  normalize.rs  planner.rs  preflight.rs  socket_options.rs  types.rs
crates/nodenet-linux-context/tests/: live_snapshot.rs
crates/nodenet-protocols/: Cargo.toml
crates/nodenet-protocols/benches/: foundation.rs
crates/nodenet-protocols/examples/: phase17_vectors.rs
crates/nodenet-protocols/fuzz/: Cargo.toml
crates/nodenet-protocols/fuzz/fuzz_targets/: parse.rs  serialize.rs
crates/nodenet-protocols/src/: arp.rs  bounds.rs  checksum.rs  correlation.rs  envelope.rs  error.rs  fuzzing.rs  icmpv4.rs  icmpv6.rs  ipv4.rs  ipv6.rs  lib.rs  link.rs  ndp.rs  network.rs  parse.rs  quoted.rs  tcp.rs  template.rs  types.rs  udp.rs  writer.rs
crates/nodenet-protocols/tests/: allocation.rs  foundation.rs  phase17.rs  phase18.rs
crates/nodenet-protocols/tests/support/: mod.rs
crates/nodenetraw-native/: Cargo.toml
crates/nodenetscanner-engine/: Cargo.toml
crates/nodenetscanner-engine/src/: bounds.rs  error.rs  lib.rs  permutation.rs  plan.rs  scheduler.rs  target.rs  timing.rs  traits.rs  types.rs
crates/nodenetscanner-engine/tests/: phase21.rs
crates/nodenetscanner-native/: Cargo.toml
crates/nodenetscanner-native/src/: binding.rs  error.rs  lib.rs  model.rs  runtime.rs  session.rs  socket.rs  wire.rs
scripts/: refuse-workspace-publish.mjs
src/: index.ts
src/internal/: event-controller.ts
test/: event-controller.test.mjs  phase11-event-stress.mjs  privileged.test.mjs  run-phase19-namespace.sh  run-phase20-namespace.sh
test/fixtures/: event-controller-process.mjs
test/fixtures/protocol/: ethernet-arp-request.hex  ethernet-ipv4-udp.hex  ethernet-ipv6-extensions.hex  phase18-udp-reply.pcap.hex
