[package]
name = "nodenetraw-native"
version = "0.1.0-rc.6"
edition = "2024"
rust-version = "1.97.0"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
fuzzing = ["napi/dyn-symbols"]

[dependencies]
napi = { version = "=3.10.4", default-features = false, features = ["napi10"] }
napi-derive = { version = "=3.5.10", default-features = false, features = ["strict", "type-def"] }
nix = { version = "=0.31.3", default-features = false, features = ["net", "socket", "uio"] }
rustix = { version = "=1.1.4", default-features = false, features = ["event", "fs", "net", "std"] }

[build-dependencies]
napi-build = "=2.3.2"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"
