[package]
name = "nodenetscanner-engine"
version = "0.0.0"
edition = "2024"
rust-version = "1.97.0"
license = "MIT"
publish = false

[dependencies]
nodenet-protocols = { path = "../nodenet-protocols" }

[lints.rust]
unsafe_code = "deny"
warnings = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"
