[package]
name = "nodenet-protocols-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
license = "MIT"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "=0.4.13"
nodenet-protocols = { path = "..", features = ["fuzzing"] }

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "serialize"
path = "fuzz_targets/serialize.rs"
test = false
doc = false
bench = false

[workspace]
